--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
  <button class="base btn" onclick="checkPass()">Login!</button>
- <p id="bottomlogin">Don't have a login? Request one <a href="https://docs.google.com/forms/d/e/1FAIpQLScCiyFtn6ODD7rIsL6HBJXHttwk89F8dirYY4vvw8q3DpA9HA/viewform"><b>here.</b></a><br> Not sure you want to sign up? This <a href="check-out-ti-home.html">informational page</a> will show you TiMedia's functions, and the benefits of becoming a user!</p>
-	<p onclick="forgotPassword();">I forgot my password.</p>
+ <!-- <p id="bottomlogin">Don't have a login? Request one <a href="https://docs.google.com/forms/d/e/1FAIpQLScCiyFtn6ODD7rIsL6HBJXHttwk89F8dirYY4vvw8q3DpA9HA/viewform"><b>here.</b></a><br> Not sure you want to sign up? This <a href="check-out-ti-home.html">informational page</a> will show you TiMedia's functions, and the benefits of becoming a user!</p> -->
+	<p id="bottomlogin" onclick="forgotPassword();">I forgot my password.</p>
 	</div>
 <div style="visibility:hidden;" id="ban">
  <h3>You are banned from TiMedia</h3>
