--- a/settings.html
+++ b/settings.html
@@ -18,7 +18,7 @@
 	PIN
 	<input type="number" id="pin" min=1000 max=999999 placeholder="A 4 - 6 digit number." required><br>
 	Recovery Password
-	<input type="text" id="rpass" placeholder="In case you forget your password." required><br>
+	<input type="password" id="rpass" placeholder="In case you forget your password." required><br>
 	<button class="base btn2" onclick="updateSettings();">Update Settings</button>
 	</center>
 <script>
