--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ var mods = ["hymenopus", "graphinghandheld", "hayden", "neil", "henry"];
   
 	
 function forgotPassword() {
-	var remail = prompt("Enter your recovery email");
+	var remail = prompt("Enter your recovery password");
 	document.cookie = "forgotp=true";
 	window.location.href = "/timedia/sync.html";
 }
