--- a/sync.html
+++ b/sync.html
@@ -3,6 +3,7 @@
 <title>TiMedia</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
+	<script>alert(window.location.href);</script>
 <center>
 <div class="top">
  <h2 style="color:white;">TiMedia</h2>
