--- a/sync.html
+++ b/sync.html
@@ -9,7 +9,7 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
 <br><br><br><br><br>
-	<img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif">
+	<img draggable=false src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif">
  </center>
 <div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
