--- a/news.html
+++ b/news.html
@@ -15,7 +15,7 @@
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 	<a href="messages.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 </div><br><br><br><br><br><br>
-	<b>New Update!</b> - Private Messages coming soon!<br>
+	<b>Private messaging is here</b> - privately chat with your pals!<br>
  </center>
  </body>
 </html>
