--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width">
 <title>TiMedia</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
