--- a/sync.html
+++ b/sync.html
@@ -11,8 +11,8 @@
 	<img draggable=false src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif">
  </center>
 <script>
-	<a href = "index.html">Not Syncing?</a>
-	</script>
+<button onclick="window.location.href='index.html'">Request Fast Sync!</button>
+</script>
 <div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10000000&ts=1495665618881");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
