--- a/sync.html
+++ b/sync.html
@@ -10,7 +10,7 @@
 <br><br><br><br><br>
 	<img draggable=false src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif">
  </center>
-<button class="base btn" onclick= window.location.href = "index.html" >Request fast sync!</button>
+<button class="base btn" onclick= "window.location.href" = "index.html" >Request fast sync!</button>
 <div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10000000&ts=1495665618881");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
