--- a/sync.html
+++ b/sync.html
@@ -10,7 +10,7 @@
 <br><br><br><br><br>
 	<img draggable=false src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif">
  </center>
-<button onClick="RequestSync()"class="basebtn2">Request fast sync!</button>
+ <button onclick="RequestSync()" class="base btn">Request Fast Sync</button>
 <script>
 function RequestSync() {
 	window.location.href = "index.html"
