--- a/notes.html
+++ b/notes.html
@@ -1,3 +1,20 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<
+<meta name="viewport" content="width=device-width">
+<title>TiMedia</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+<body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<center>
+<div class="top">
+ <h2 style="color:white;">TiMedia</h2>
+ </div>
+<br><br>
+<script>
+var notetitle = prompt("Please enter a note title")
+var note = prompt("Please enter your note's main body")
+localStorage.notes = notetitle + note + "; Next note:"
+
+
+  
+</html>
