--- a/notes.html
+++ b/notes.html
@@ -10,11 +10,13 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
 <br><br>
+ <h1>TiMedia Text</h1>
+ <h3>localStorage.notetitle</h3>
+ <h5>localStorage.note</h5>
 <script>
 var notetitle = prompt("Please enter a note title")
 var note = prompt("Please enter your note's main body")
-localStorage.notes = notetitle + note + "; Next note:"
-
-
-  
+localStorage.notetitile = notetitle
+localStorage.note = note
+ </script>
 </html>
