--- a/notes.html
+++ b/notes.html
@@ -14,9 +14,12 @@
  <h3>localStorage.notetitle</h3>
  <h5>localStorage.note</h5>
 <script>
+ function notes() {
+  
 var notetitle = prompt("Please enter a note title")
 var note = prompt("Please enter your note's main body")
 localStorage.notetitile = notetitle
 localStorage.note = note
+ }
  </script>
 </html>
