--- a/notes.html
+++ b/notes.html
@@ -10,6 +10,7 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
 <br><br>
+ <script>notes()</script>
  <h1>TiMedia Text</h1>
  <h3>localStorage.notetitle</h3>
  <h5>localStorage.note</h5>
