--- a/notes.html
+++ b/notes.html
@@ -12,7 +12,8 @@
 <br><br>
  <script>notes()</script>
  <h1>TiMedia Text</h1>
- <h3>localStorage.notetitle</h3>
+ localStorage.notetitle
+ localStorage.note
  <h5>localStorage.note</h5>
 <script>
  function notes() {
