--- a/notes.html
+++ b/notes.html
@@ -10,7 +10,6 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
 <br><br>
- <script>notes()</script>
 <script>
  function notes() {
   
@@ -19,5 +18,8 @@ var note = prompt("Please enter your note's main body")
 localStorage.notetitile = notetitle
 localStorage.note = note
  }
+ </script>
+ <script>
+   <script>notes()</script>
  </script>
 </html>
