--- a/notes.html
+++ b/notes.html
@@ -1,25 +1,23 @@
-<!DOCTYPE html>
+
+<!DOCTYPE>
 <html>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge"
-<meta name="viewport" content="width=device-width">
-<title>TiMedia</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-<body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<center>
-<div class="top">
- <h2 style="color:white;">TiMedia</h2>
- </div>
- <div class="doc">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Ti text editorr</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://collaborative-text-editor.herokuapp.com/css/app.css" rel="stylesheet"></link>
+  </head>
+  <body>
+    <header class="header">
+      <h1 class="header__h1">Online Collab Edit</h1>
+    </header>
+    <div class="doc">
       <div class="doc__background-ribbon"></div>
-      <div class="doc__text-editor hidden"></div>
+      <div id="doc" class="doc__text-editor"></div>
     </div>
+    <script src="https://js.pusher.com/4.0/pusher.min.js"></script>
+    <script src="https://collaborative-text-editor.herokuapp.com/js/app.js"></script>
   </body>
-</html>
- <script>
-  var doc = document.getElementById('doc');
-doc.contentEditable = true;
-doc.focus();
- </script>
 </html>
