--- a/notes.html
+++ b/notes.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Ti text editorr</title>
+    <title>Ti text editor</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://collaborative-text-editor.herokuapp.com/css/app.css" rel="stylesheet"></link>
   </head>
