--- a/notes.html
+++ b/notes.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ti text editor</title>
+    <h4>This collabrative text editor is open to all TiMedia members<h4>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://collaborative-text-editor.herokuapp.com/css/app.css" rel="stylesheet"></link>
   </head>
