--- a/notes.html
+++ b/notes.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ti text editor</title>
-    <h4>This collabrative text editor is open to all TiMedia members<h4>
+    <center>
+    <h3>Welcome to TiMedia Documents!<h3> 
+    <h4>This text editor features advanced sharing, just Private Message the document specific URL to another user to share!<h4>
+      </center>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://collaborative-text-editor.herokuapp.com/css/app.css" rel="stylesheet"></link>
   </head>
   <body>
     <header class="header">
-      <h1 class="header__h1">Online Collab Edit</h1>
+      <h1 class="header__h1">TiMedia Documents</h1>
     </header>
     <div class="doc">
       <div class="doc__background-ribbon"></div>
