--- a/notes.html
+++ b/notes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ti text editor</title>
+    <script> src = "/app.js" </script>
     <center>
     <h3>Welcome to TiMedia Documents!<h3> 
     <h4>This text editor features advanced sharing, just Private Message the document specific URL to another user to share!<h4>
