--- a/notes.html
+++ b/notes.html
@@ -20,5 +20,10 @@
     <div class="doc">
       <div class="doc__background-ribbon"></div>
       <div id="doc" class="doc__text-editor"></div>
+      <script>
+        var doc = document.getElementById('doc');
+doc.contentEditable = true;
+doc.focus();
+      </script>
     </div>
    </html>
