--- a/notes.html
+++ b/notes.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Online Collaborative Text Editor</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="/style.css" rel="stylesheet"></link>
+    <link href= "https://collaborative-text-editor.herokuapp.com/css/app.css" rel="stylesheet"></link>
   </head>
   <body>
     <header class="header">
