--- a/notes.html
+++ b/notes.html
@@ -7,10 +7,11 @@
     <title>Online Collaborative Text Editor</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href= "https://collaborative-text-editor.herokuapp.com/css/app.css" rel="stylesheet"></link>
+  <script src = "app.js" </script>
   </head>
   <body>
     <header class="header">
-      <h1 class="header__h1">Online Collab Edit</h1>
+      <h1 class="header__h1">TiMedia Text</h1>
     </header>
     <div class="doc">
       <div class="doc__background-ribbon"></div>
