--- a/notes.html
+++ b/notes.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Online Collaborative Text Editor</title>
+    <title>TiMedia Text</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href= "https://collaborative-text-editor.herokuapp.com/css/app.css" rel="stylesheet"></link>
   <script src = "app.js" </script>
