--- a/programs.html
+++ b/programs.html
@@ -10,11 +10,9 @@
 <br><br>
 <h2 id="admin">Checking if you have permission...</h1>
 <div id="hidden" style="visibility:hidden;">
- <!-- begin comment box -->
- <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
- <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
- <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%243yD1.Hi93ryNAuOTAUZB50"+"&opts=16406&num=10&ts=1494623824036");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
-<!-- end comment box -->
+ <h1>What kind of calculator do you have?</h1>
+ <a href="https://education.ti.com/">TI 84/83 plus</a>
+ <a href="https://education.ti.com/">TI 84 plus CE</a>
 </div>
 </center>
 <script>
