--- a/programs.html
+++ b/programs.html
@@ -41,7 +41,7 @@ function getCookie(cname) {
     return "";
 }
 if (contains(admins, getCookie("name"))) {
-   document.getElementById('admin').innerHTML = "What kind of calculaator do you have?";
+   document.getElementById('admin').innerHTML = "What kind of calculator do you have?";
    document.getElementById('hidden').style = "visibility:block;";
 } else {
   document.getElementById('admin').innerHTML = "To access this page get in the TiPoints store";
