--- a/points.html
+++ b/points.html
@@ -113,6 +113,10 @@ function checkPledge() {
 if (localStorage.points == undefined) {
  localStorage.setItem("points", 0);
 }
+
+if (localStorage.purchases == undefined) {
+    localStorage.purchases = "";
+}
 	
 document.getElementById('balance').innerHTML = localStorage.points + " TiPoints";
 
