--- a/programs.html
+++ b/programs.html
@@ -10,9 +10,9 @@
 <br><br>
 <h2 id="admin">Checking if you have permission...</h1>
 <div id="hidden" style="visibility:hidden;">
- <a href="https://education.ti.com/">TI 84/83 plus</a>
+ <a href="TI84plusCE">TI 84/83 plus</a>
  <br />
- <a href="https://education.ti.com/">TI 84 plus CE</a>
+ <a href="TI84plusCE.html">TI 84 plus CE</a>
 </div>
 </center>
 <script>
