--- a/TI84plusCE.html
+++ b/TI84plusCE.html
@@ -11,7 +11,7 @@
 <br><br>
 <h2 id="admin">Checking if you have permission...</h1>
 <div id="hidden" style="visibility:hidden;">
- <a href="TI84plusCE">Mario</a>
+ <a href="http://www.ticalc.org/archives/files/fileinfo/468/46851.html">Mario</a>
  <br />
  <a href="TI84plusCE.html">Pacman</a>
 </div>
