--- a/TI84plusCE.html
+++ b/TI84plusCE.html
@@ -11,9 +11,13 @@
 <br><br>
 <h2 id="admin">Checking if you have permission...</h1>
 <div id="hidden" style="visibility:hidden;">
- <a href="http://www.ticalc.org/archives/files/fileinfo/468/46851.html">Mario</a>
+ <a href="/pub/84plusce/asm/games/oiram.zip">Download Mario</a>
  <br />
- <a href="TI84plusCE.html">Pacman</a>
+ <a href="../scripts/countdown.php?/84pce/asm/games/PacManCE.zip&amp;path=archives">Download PacMan</a>
+ <br />
+ <a href="../scripts/countdown.php?/84pce/asm/games/GeometryDash.zip&amp;path=archives">Download GeometryDash</a>
+ <br />
+ 
 </div>
 </center>
 <script>
