--- a/TI84plusCE.html
+++ b/TI84plusCE.html
@@ -11,11 +11,11 @@
 <br><br>
 <h2 id="admin">Checking if you have permission...</h1>
 <div id="hidden" style="visibility:hidden;">
- <a href="/pub/84plusce/asm/games/oiram.zip">Download Mario</a>
+ <a href="http://www.ticalc.org/archives/files/fileinfo/468/46851.html">Mario</a>
  <br />
- <a href="../scripts/countdown.php?/84pce/asm/games/PacManCE.zip&amp;path=archives">Download PacMan</a>
+ <a href="http://www.ticalc.org/archives/files/fileinfo/464/46430.html">PacMan</a>
  <br />
- <a href="../scripts/countdown.php?/84pce/asm/games/GeometryDash.zip&amp;path=archives">Download GeometryDash</a>
+ <a href="http://www.ticalc.org/archives/files/fileinfo/468/46800.html">Chess (with AI)</a>
  <br />
  
 </div>
