--- a/TI84plusCE.html
+++ b/TI84plusCE.html
@@ -18,6 +18,9 @@
  <a href="http://www.ticalc.org/archives/files/fileinfo/468/46800.html">Chess (with AI)</a>
  <br />
  <a href="http://www.ticalc.org/archives/files/fileinfo/464/46438.html">Portal Returns</a>
+ <br />
+ <a href="https://www.cemetech.net/scripts/countdown.php?/84pce/asm/games/GeometryDash.zip&location=archive">GeometryDash</a>
+ <br />
 </div>
 </center>
 <script>
