--- a/programs.html
+++ b/programs.html
@@ -10,7 +10,7 @@
 <br><br>
 <h2 id="admin">Checking if you have permission...</h1>
 <div id="hidden" style="visibility:hidden;">
- <a href="TI84plusCE">TI 84/83 plus</a>
+ <a href="8384plus.html">TI 84/83 plus</a>
  <br />
  <a href="TI84plusCE.html">TI 84 plus CE</a>
 </div>
