--- a/8384plus.html
+++ b/8384plus.html
@@ -11,7 +11,7 @@
 <h2 id="admin">Checking if you have permission...</h1>
 <div id="hidden" style="visibility:hidden;">
  <a href="">The ultimate calculator, just transfer for the best combinations of games and programs!</a>
- <h4>clear your calculator with 2nd+7+Right arrow+Right arrow+1+2</h4>
+ <h4>Clear your calculator with 2nd+7+Right arrow+Right arrow+1+2</h4>
  <br />
 </div>
 </center>
