--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 	<a href="messages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 	<a href="https://proudloyaltier.github.io/tidocs/"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
-	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="f_downloads_309074.png"></a>
+	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
 </div><br><br><br><br><br>
  <h1 id="hello">Hello!</h1><button onclick="logOut()" class="base btn">Log Out</button>
 <p id="modpanelnotice"></p>
