--- a/TI84plusCE.html
+++ b/TI84plusCE.html
@@ -9,6 +9,15 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
 <br><br>
+<div class="background" id="navbar">
+	<a href="index.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
+	<a href="news.html"><img draggable=false id="news-icon" style="padding:50px;" width=50px src="news.png"></a>
+	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
+	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
+	<a href="messages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
+	<a href="https://proudloyaltier.github.io/tidocs/"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
+	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
+</div><br><br><br><br><br>
 <h2 id="admin">Checking if you have permission...</h1>
 <div id="hidden" style="visibility:hidden;">
  <a href="http://www.ticalc.org/archives/files/fileinfo/468/46851.html">Mario</a>
