--- a/TI84plusCE.html
+++ b/TI84plusCE.html
@@ -59,7 +59,7 @@ function getCookie(cname) {
     return "";
 }
 if (contains(admins, getCookie("name"))) {
-   document.getElementById('admin').innerHTML = "Arcade";
+   document.getElementById('admin').innerHTML = "Games";
    document.getElementById('hidden').style = "visibility:block;";
 } else {
   document.getElementById('admin').innerHTML = "To access this page get in the TiPoints store";
