--- a/docs.html
+++ b/docs.html
@@ -24,17 +24,17 @@
 	<textarea rows="20" cols="100" id="tid-text-area"></textarea><br><br>
 
 	Security<br>
-		<select>
-		  <option onchange="proccessSecurity(this);" value="none">No Security</option>
-		  <option onchange="proccessSecurity(this);" value="password">Require a Password</option>
-		  <option onchange="proccessSecurity(this);" value="specific">Limit to Specific Users</option>
+		<select id="security" onchange="proccessSecurity(this);">
+		  <option value="none">No Security</option>
+		  <option value="password">Require a Password</option>
+		  <option value="specific">Limit to Specific Users</option>
 		</select>
 	
 		<input placeholder="Password" style="display: none;" type="password" id="tid-password">
 		<input placeholder="Confirm Password" style="display: none;" type="password" id="tid-confirm-password">
 		<textarea rows="10" cols="40" placeholder="Usernames (separate with space)" style="display: none;" id="tid-users-allowed"></textarea><br>
 
-	<button onclick="saveDocument();">Save Document</button>
+	<button class="base btn2" onclick="saveDocument();">Save Document</button>
 </div>
 
 <script>
