--- a/TI84plusCE.html
+++ b/TI84plusCE.html
@@ -20,6 +20,8 @@
 </div><br><br><br><br><br>
 <h2 id="admin">Checking if you have permission...</h1>
 <div id="hidden" style="visibility:hidden;">
+ <a href="https://education.ti.com/en/software/details/en/CA9C74CAD02440A69FDC7189D7E1B6C2/swticonnectcesoftware">TI Connect CE</a>
+ <br />
  <a href="http://www.ticalc.org/archives/files/fileinfo/468/46851.html">Mario</a>
  <br />
  <a href="http://www.ticalc.org/archives/files/fileinfo/464/46430.html">PacMan</a>
