--- a/TI84plusCE.html
+++ b/TI84plusCE.html
@@ -20,7 +20,9 @@
 </div><br><br><br><br><br>
 <h2 id="admin">Checking if you have permission...</h1>
 <div id="hidden" style="visibility:hidden;">
+ <br />
  <a href="https://education.ti.com/en/software/details/en/CA9C74CAD02440A69FDC7189D7E1B6C2/swticonnectcesoftware">TI Connect CE</a>
+ <br />
  <br />
  <a href="http://www.ticalc.org/archives/files/fileinfo/468/46851.html">Mario</a>
  <br />
@@ -64,7 +66,7 @@ if (contains(admins, getCookie("name"))) {
    document.getElementById('admin').innerHTML = "Games";
    document.getElementById('hidden').style = "visibility:block;";
 } else {
-  document.getElementById('admin').innerHTML = "To access this page get in the TiPoints store";
+  document.getElementById('admin').innerHTML = "This page is currently unavailable";
 }
  </script>
 </html>
