--- a/TI84plusCE.html
+++ b/TI84plusCE.html
@@ -22,7 +22,7 @@
 <div id="hidden" style="visibility:hidden;">
 	<b>Download Instructions</b>
 	<br />
-	<p>1 Download TI Connect CE onto a computer<br />2 Download your games of choice<br />3 Plug in your calculator and open TI Connect CE<br />4 </p>
+	<p>1 Download TI Connect CE onto a computer<br />2 Download your games of choice<br />3 Plug in your calculator and open TI Connect CE<br />4. Drag the .8xp file(s) to the "Calculator explorer" section on Ti Connect CE </p>
  <br />
  <a href="https://education.ti.com/en/software/details/en/CA9C74CAD02440A69FDC7189D7E1B6C2/swticonnectcesoftware">TI Connect CE</a>
  <br />
