--- a/8384plus.html
+++ b/8384plus.html
@@ -19,6 +19,7 @@
 </div><br><br><br><br><br>
 <h2 id="admin">Checking if you have permission...</h1>
 <div id="hidden" style="visibility:hidden;">
+	<h3>Please refer to the instructions on the TI 84 Plus CE page!</h3>
  <a href="">The ultimate calculator, just transfer for the best combinations of games and programs!</a>
  <h4>Clear your calculator with 2nd+7+Right arrow+Right arrow+1+2</h4>
  <br />
