--- a/8384plus.html
+++ b/8384plus.html
@@ -18,8 +18,15 @@
 	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
 </div><br><br><br><br><br>
 <h2 id="admin">Checking if you have permission...</h1>
+>
 <div id="hidden" style="visibility:hidden;">
-	<h3>Please refer to the instructions on the TI 84 Plus CE page!</h3>
+	<b>Download Instructions</b>
+	<br />
+	<p>1 Download TI Connect CE onto a computer<br />2 Download your games of choice<br />3 Plug in your calculator and open TI Connect CE<br />4. Drag the .8xp file(s) to the "Calculator explorer" section on Ti Connect CE </p>
+ <br />
+ <a href="https://education.ti.com/en/software/details/en/CA9C74CAD02440A69FDC7189D7E1B6C2/swticonnectcesoftware">TI Connect CE</a>
+ <br />
+ <br />
  <a href="https://drive.google.com/drive/folders/0B1KffSBvcVoqOTlTaVRkNjJGLTA">The ultimate calculator, just transfer for the best combinations of games and programs!(Press download all)</a>
  <h4>Clear your calculator with 2nd+7+Right arrow+Right arrow+1+2</h4>
  <br />
