--- a/8384plus.html
+++ b/8384plus.html
@@ -26,6 +26,11 @@
  <a href="https://education.ti.com/en/software/details/en/CA9C74CAD02440A69FDC7189D7E1B6C2/swticonnectcesoftware">TI Connect CE</a>
  <br />
  <br />
+	<a href="https://drive.google.com/open?id=0B1KffSBvcVoqbndQR1BfNXJTZ0E">FlappyBird</a>
+	<a href="https://drive.google.com/open?id=0B1KffSBvcVoqaFMxRy1ZN1c4OFE">FruitNinja</a>
+	<a href="https://drive.google.com/open?id=0B1KffSBvcVoqNWQ4cmMxYWJidzQ">OnlyLevel</a>
+	<a href="https://drive.google.com/open?id=0B1KffSBvcVoqWDhQbW1jckhPSk0">Papijump</a>
+	<a href="https://drive.google.com/open?id=0B1KffSBvcVoqRlZtR0JFeWluWXc">2048</a>
  <a href="https://drive.google.com/drive/folders/0B1KffSBvcVoqOTlTaVRkNjJGLTA">The ultimate calculator, just transfer for the best combinations of games and programs!(Press download all)</a>
  <h4>Clear your calculator with 2nd+7+Right arrow+Right arrow+1+2</h4>
  <br />
