--- a/mobilemenu.html
+++ b/mobilemenu.html
@@ -1,5 +1,4 @@
-<a href="news.html"><img draggable=false id="news-icon" style="padding:50px
-<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=200px src="money.png"></a>
-<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=200px src="gears.png"></a>
-<a href="messages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=200px src="timage.svg"></a>
-<a href="docs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=200px src="pen.png"></a>
+<a href="mobilepoints.html"><img draggable=false id="money-icon" style="padding:50px;" width=200px src="money.png"></a>
+<a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=200px src="gears.png"></a>
+<a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=200px src="timage.svg"></a>
+<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=200px src="pen.png"></a>
