--- a/mobilesettings.html
+++ b/mobilesettings.html
@@ -8,7 +8,9 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
 <br><br>
+<div class="background" id="navbar">
 <a href="mobilemenu"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
+	</div>
 
 </div><br><br><br><br><br><br>
 	PIN
