--- a/mobilemenu.html
+++ b/mobilemenu.html
@@ -1,8 +1,10 @@
 <DOCTYPE html>
 <html>
+<div class="background" id="navbar">
 <a href="mobilepoints.html"><img draggable=false id="money-icon" style="padding:50px;" width=200px src="money.png"></a>
 <a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=200px src="gears.png"></a>
 <a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=200px src="timage.svg"></a>
 <a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=200px src="pen.png"></a>
+  </div>
   </html>
    
