--- a/mobilepoints.html
+++ b/mobilepoints.html
@@ -7,7 +7,8 @@
  </div>
  <br><br>
 <div class="background" id="navbar">
-	<a href="mobilemenu.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a
+	<a href="mobilemenu.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
+	</div>
 
 </div><br><br><br><br><br>
 <h1 id="balance">Loading...</h1>
