--- a/mobilemenu.html
+++ b/mobilemenu.html
@@ -1,5 +1,6 @@
 <DOCTYPE html>
 <html>
+<link rel="stylesheet" type="text/css" href="style.css">
 <div class="background" id="navbar">
 <a href="mobilepoints.html"><img draggable=false id="money-icon" style="padding:50px;" width=200px src="money.png"></a>
 <a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=200px src="gears.png"></a>
