--- a/mobilemenu.html
+++ b/mobilemenu.html
@@ -12,6 +12,7 @@
 <a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=200px src="timage.svg"></a>
 <a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=200px src="pen.png"></a>
  <h4>To login click <a href="index.html">here</a> and come back to this page</h4>
+ <script>
 <button onclick="logOut()" class="base btn">Log Out</button>
 <script>
  function logOut() {
