--- a/programs.html
+++ b/programs.html
@@ -18,6 +18,22 @@
 	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
 </div><br><br><br><br><br>
 	<h1></h1>
+	<h2>Search the web for other calculator programs with TiMedia Search!</h2>
+	<div>
+		<script>
+  (function() {
+    var cx = '015905195077430121820:bdp9j02ongm';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
+	</div>
+	<br>
  <a href="8384plus.html">TI 84/83 plus</a>
  <br />
  <a href="TI84plusCE.html">TI 84 plus CE</a>
