--- a/programs.html
+++ b/programs.html
@@ -34,6 +34,8 @@
 <gcse:search></gcse:search>
 	</div>
 	<br>
+	<h2>You can also download programs for the following calculators below:</h2>
+	<h4>Programs have been made by authors at cemetech.net & ticalc.org</h4>
  <a href="8384plus.html">TI 84/83 plus</a>
  <br />
  <a href="TI84plusCE.html">TI 84 plus CE</a>
